syntax = "proto3";

package instagram;

option java_package = "com.proto.instagram";
option java_multiple_files = true;


message LoginRequest {
  int64 id = 1;
  string code = 2;
  string proxy = 3;
}

message LoginResponse {
  bool success = 1;
  User user = 2;
}

message User {
  int64 pk = 1;
  string user_name = 2;
  string full_name = 3;
  string profile_picture_url = 4;
  string profile_picture_id = 5;
}

service LoginService {

  rpc SimpleLogin(LoginRequest) returns (LoginResponse) {};

  rpc SimulatedLogin(LoginRequest) returns (LoginResponse) {};

}